[package]
name = "commty"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0"
authors = ["Jesse Smith <jesses2025smith@gmail.com>"]
description = "`commty` is a Rust library providing common types."
homepage = "https://github.com/jesses2025smith/commty-rs"
repository = "https://github.com/jesses2025smith/commty-rs"

[dependencies]
